# DocGen

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
src/: config.yaml  cpp_analyzer.py  doc_generator.py  function_describer.py  main.py  paper_processor.py
